2001-11-19  Matt Wilson  <msw@redhat.com>

	* pango.defs (PangoContext.add_font_map): renamed to set_font_map
	(PangoFontMap.load_font): added context argument

2001-11-17  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.defs: added GtkTreeView.get_columns,
	GtkTreeView.move_column_after, GtkTreeView.map_expanded_rows,
	GtkTreeView.row_expanded, GtkTreeView.get_cursor,
	GtkTreeView.get_bin_window, GtkTreeView.enable_model_drag_source,
	GtkTreeView.enable_model_drag_dest, GtkTreeView.set_enable_search,
	GtkTreeView.get_enable_search, GtkTreeView.get_search_column,
	GtkTreeView.set_search_column, GtkTreeView.get_search_equal_func,
	GtkTreeView.set_search_equal_func,
	GtkTreeView.set_destroy_count_func

2001-11-17  Matt Wilson  <msw@redhat.com>

	* codegen/codegen.py (write_*): pass in any error checking and
	handling code snippets into the return function writer.  Only add
	keywords for arguments that are going to be parsed, Python 2.2 now
	checks to make sure the kwlist length equals the paramspec.

	* codegen/argtypes.py: remove GtkCTreeNode custom registration,
	it's a generic boxed type.  Added a GErrorType requested in bug
	#63980.  This requires inserting possible error checking in each
	type's write_return method.

	* gtk/gtk.defs (gtk_image_new_from_icon_set): changed size
	argument from char* to GtkIconSize
	(GtkIconSet.render_icon): likewise

	* gtk/gtk-types.defs (IconSet): added GtkIconSet boxed type

	* gtk/gtk.override (_wrap_gtk_tree_model_get_value): value is not
	parsed, remove it from the kwlist.

2001-11-16  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.override (_wrap_gtk_tree_view_get_path_at_pos): remove
	window argument

	* gtk/gtk.defs (GtkTreeView.get_path_at_pos): remove window argument

	* gobjectmodule.c (pyg_param_spec_getattr, pyg_param_spec_repr):
	s/g_param_get_{name,nick,blurb}/g_param_spec_get_{name,nick,blurb}/g
	(pyg_fatal_exceptions_notify_remove): use the right type.

	* gtk/pygtk.h (init_pygtk): need to cast to the right type for