@@ -1,5 +1,9 @@
 2001-11-19  Matt Wilson  <msw@redhat.com>
 
+	* gobjectmodule.c (pyg_fatal_exceptions_notify_{add,remove}):
+	fixed think-o, don't store a pointer to the function pointer, just
+	store the function pointer.
+
 	* pango.defs (PangoContext.add_font_map): renamed to set_font_map
 	(PangoFontMap.load_font): added context argument
 
